--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,7 +3,7 @@
      font-style: normal;
      font-weight: 400;
      src: 
-          url('../fonts/Poppins-Regular.woff') format('woff')
+          url('../fonts/Poppins-Regular.woff') format('woff'),
           url('../fonts/Poppins-Regular.woff2') format('woff2');
 }
      
@@ -13,7 +13,7 @@
      font-style: italic;
      font-weight: 400;
      src: 
-          url('../fonts/Poppins-Italic.woff') format('woff')
+          url('../fonts/Poppins-Italic.woff') format('woff'),
           url('../fonts/Poppins-Italic.woff2') format('woff2');
 }
      
@@ -22,7 +22,7 @@
      font-style: normal;
      font-weight: 200;
      src: 
-          url('../fonts/Poppins-ExtraLight.woff') format('woff')
+          url('../fonts/Poppins-ExtraLight.woff') format('woff'),
           url('../fonts/Poppins-ExtraLight.woff2') format('woff2');
 }
      
@@ -32,7 +32,7 @@
      font-style: italic;
      font-weight: 200;
      src: 
-          url('../fonts/Poppins-ExtraLightItalic.woff') format('woff')
+          url('../fonts/Poppins-ExtraLightItalic.woff') format('woff'),
           url('../fonts/Poppins-ExtraLightItalic.woff2') format('woff2');
 }
      
@@ -42,7 +42,7 @@
      font-style: normal;
      font-weight: 300;
      src: 
-          url('../fonts/Poppins-Light.woff') format('woff')
+          url('../fonts/Poppins-Light.woff') format('woff'),
           url('../fonts/Poppins-Light.woff2') format('woff2');
 }
      
@@ -52,7 +52,7 @@
      font-style: italic;
      font-weight: 300;
      src: 
-          url('../fonts/Poppins-LightItalic.woff') format('woff')
+          url('../fonts/Poppins-Regular.woff') format('woff'),
           url('../fonts/Poppins-LightItalic.woff2') format('woff2');
 }
      
@@ -61,7 +61,7 @@
      font-style: normal;
      font-weight: 600;
      src: 
-          url('../fonts/Poppins-Bold.woff') format('woff')
+          url('../fonts/Poppins-Bold.woff') format('woff'),
           url('../fonts/Poppins-Bold.woff2') format('woff2');
 }
      
@@ -71,11 +71,10 @@
      font-style: italic;
      font-weight: 600;
      src: 
-          url('../fonts/Poppins-BoldItalic.woff') format('woff')
+          url('../fonts/Poppins-BoldItalic.woff') format('woff'),
           url('../fonts/Poppins-BoldItalic.woff2') format('woff2');
 }
 
-  html{
-      font-family: "Poppins", sans-serif;
-  }
-  
+html{
+     font-family: 'Poppins', sans-serif;
+}
