--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,79 +1,67 @@
 @font-face {
      font-family: 'Poppins';
-     font-style: normal;
-     font-weight: 400;
-     src: 
-          url('../fonts/Poppins-Regular.woff') format('woff'),
-          url('../fonts/Poppins-Regular.woff2') format('woff2');
-}
-     
- 
-@font-face {
-     font-family: 'Poppins';
-     font-style: italic;
-     font-weight: 400;
-     src: 
-          url('../fonts/Poppins-Italic.woff') format('woff'),
-          url('../fonts/Poppins-Italic.woff2') format('woff2');
-}
-     
-@font-face {
-     font-family: 'Poppins';
-     font-style: normal;
+     src: url('../fonts/Poppins-ExtraLight.woff2') format('woff2'),
+         url('../fonts/Poppins-ExtraLight.woff') format('woff');
      font-weight: 200;
-     src: 
-          url('../fonts/Poppins-ExtraLight.woff') format('woff'),
-          url('../fonts/Poppins-ExtraLight.woff2') format('woff2');
-}
-     
- 
-@font-face {
+     font-style: normal;
+ }
+
+ @font-face {
      font-family: 'Poppins';
-     font-style: italic;
+     src: url('../fonts/Poppins-ExtraLightItalic.woff2') format('woff2'),
+         url('../fonts/Poppins-ExtraLightItalic.woff') format('woff');
      font-weight: 200;
-     src: 
-          url('../fonts/Poppins-ExtraLightItalic.woff') format('woff'),
-          url('../fonts/Poppins-ExtraLightItalic.woff2') format('woff2');
-}
-     
- 
-@font-face {
-     font-family: 'Poppins';
-     font-style: normal;
-     font-weight: 300;
-     src: 
-          url('../fonts/Poppins-Light.woff') format('woff'),
-          url('../fonts/Poppins-Light.woff2') format('woff2');
-}
-     
- 
-@font-face {
-     font-family: 'Poppins';
      font-style: italic;
-     font-weight: 300;
-     src: 
-          url('../fonts/Poppins-Regular.woff') format('woff'),
-          url('../fonts/Poppins-LightItalic.woff2') format('woff2');
-}
-     
-@font-face {
-     font-family: 'Poppins';
-     font-style: normal;
-     font-weight: 600;
-     src: 
-          url('../fonts/Poppins-Bold.woff') format('woff'),
-          url('../fonts/Poppins-Bold.woff2') format('woff2');
-}
-     
+ }
  
-@font-face {
+ @font-face {
      font-family: 'Poppins';
+     src: url('../fonts/Poppins-Light.woff2') format('woff2'),
+         url('../fonts/Poppins-Light.woff') format('woff');
+     font-weight: 300;
+     font-style: normal;
+ }
+
+ @font-face {
+     font-family: 'Poppins';
+     src: url('../fonts/Poppins-LightItalic.woff2') format('woff2'),
+         url('../fonts/Poppins-LightItalic.woff') format('woff');
+     font-weight: 300;
      font-style: italic;
+     font-display: swap;
+ }
+ 
+ @font-face {
+     font-family: 'Poppins';
+     src: url('../fonts/Poppins-Regular.woff2') format('woff2'),
+         url('../fonts/Poppins-Regular.woff') format('woff');
+     font-weight: 400;
+     font-style: normal;
+ }
+ 
+ @font-face {
+     font-family: 'Poppins';
+     src: url('../fonts/Poppins-Italic.woff2') format('woff2'),
+         url('../fonts/Poppins-Italic.woff') format('woff');
+     font-weight: 400;
+     font-style: italic;
+ }
+
+ @font-face {
+     font-family: 'Poppins';
+     src: url('../fonts/Poppins-Bold.woff2') format('woff2'),
+         url('../fonts/Poppins-Bold.woff') format('woff');
      font-weight: 600;
-     src: 
-          url('../fonts/Poppins-BoldItalic.woff') format('woff'),
-          url('../fonts/Poppins-BoldItalic.woff2') format('woff2');
-}
+     font-style: normal;
+ }
+ 
+ @font-face {
+     font-family: 'Poppins';
+     src: url('../fonts/Poppins-BoldItalic.woff2') format('woff2'),
+         url('../fonts/Poppins-BoldItalic.woff') format('woff');
+     font-weight: 600;
+     font-style: italic;
+ }
 
 html{
      font-family: 'Poppins', sans-serif;
