--- a/styles/global.css
+++ b/styles/global.css
@@ -17,10 +17,35 @@ a{
     text-decoration: none;
 }
 
+b{
+    color: var(--black);
+    padding: 0 0.5rem;
+}
+
 body{
     background-color: var(--black);
     color: var(--white);
-    margin: 6.4%;
+    font-size: 1rem;
+    font-weight: 300;
+    margin: 1.5rem;
+}
+
+h1{
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+}
+
+h2{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    margin-top: 2.5rem;
+}
+
+h3{
+    font-weight: 600;
+    margin-top: 0.5rem;
 }
 
 header{
@@ -29,11 +54,22 @@ header{
     grid-template-rows: 100%;
 }
 
+img{
+    max-width: 100%;
+}
+
 nav{
     display: none;
 }
 
+p, li{
+    line-height: 1.5rem;
+}
+
 /* Specific styles */
+.active-page{
+    font-weight: 600;
+}
 
 #footer{
     border-top: 1px solid var(--white);
@@ -41,29 +77,95 @@ nav{
 }
 
 #footer p{
-    font-weight: 300;
-    padding-top: 4%;
+    padding-top: 1rem;
 }
 
 #hamburger-menu{
     justify-self: end;
 }
 
+.h1{
+    background-color: var(--blue);
+}
+
 #header{
+    font-size: 1.25rem;
+    font-weight: 400;
     grid-area: header;
 }
 
+.list{
+    list-style: square;
+    margin-left: 1rem;
+}
+
 #main{
-    margin-top: 10%;
-    margin-bottom: 10%;
+    grid-area: main;
+    margin-top: 8%;
+    margin-bottom: 8%;
 }
 
 #wrapper{
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: 10% 80% 10%;
+    grid-template-rows: auto auto auto;
     grid-template-areas: 
         'header header' 
         'main main' 
         'footer footer';
+}
+
+/* Media queries */
+@media (min-width: 768px){
+    body{
+        font-size: 1.125rem;
+        margin: 3rem;
+    }
+
+    p, li{
+        line-height: 1.6875rem;
+    }
+
+    h1{
+        font-size: 3.4rem;
+    }
+
+    h2{
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+        margin-top: 3rem;
+    }
+    
+    h3{
+        margin-top: 1rem;
+    }
+
+    #hamburger-menu{
+        display: none;
+    }
+
+    nav{
+        display: block;
+        justify-self: end;
+    }
+
+    nav ul{
+        display: flex;
+        gap: 1.5rem;
+    }
+}
+
+@media (min-width: 1280px){
+    body{
+        font-size: 1.25rem;
+        margin: 3rem 8.25rem;
+    }
+
+    p, li{
+        line-height: 1.875rem;
+    }
+
+    h1{
+        font-size: 3.8rem;
+    }
 }
