--- a/styles/resume.css
+++ b/styles/resume.css
@@ -20,6 +20,10 @@
     background-color: var(--green);
 }
 
+.section{
+    margin-bottom: 0.5rem;
+}
+
 #skills{
     background-color: var(--orange);
 }
@@ -29,7 +33,7 @@
 }
 
 /* Media Queries */
-@media (min-width: 768px){
+@media (min-width: 750px){
     #download-link{
         margin-bottom: 1rem;
         margin-top: 4rem;
@@ -37,13 +41,12 @@
 
     #resume-content{
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 49% 2% 49%;
         grid-template-rows: auto auto auto;
         grid-template-areas: 
-            'education work-experience'
-            'skills work-experience'
-            'relevant-coursework honors-awards';
-        gap: 1rem;
+            'education . honors-awards'
+            'skills . work-experience'
+            'relevant-coursework . work-experience';
     }
 
     #education-section{
@@ -67,7 +70,7 @@
     }
 }
 
-@media (min-width: 1280px){
+@media (min-width: 1200px){
     #download-link{
         margin-bottom: 1rem;
         margin-top: 6rem;
@@ -75,12 +78,10 @@
 
     #resume-content{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto;
+        grid-template-columns: 32% 2% 32% 2% 32%;
+        grid-template-rows: auto auto auto;
         grid-template-areas: 
-            'education work-experience honors-awards'
-            'skills work-experience relevant-coursework';
-        gap: 2rem;
+            'education . work-experience . honors-awards'
+            'skills . work-experience . relevant-coursework';
     }
-
 }
