--- a/styles/global.css
+++ b/styles/global.css
@@ -32,13 +32,15 @@ body{
 h1{
     font-size: 3rem;
     font-weight: 600;
-    margin-bottom: 3rem;
+    line-height: 5rem;
+    margin-bottom: 1.5rem;
 }
 
 h2{
     font-size: 1.25rem;
     font-weight: 600;
-    margin-bottom: 1rem;
+    line-height: 2rem;
+    margin-bottom: 0.3rem;
     margin-top: 2rem;
 }
 
@@ -53,13 +55,21 @@ header{
     grid-template-rows: 100%;
 }
 
+html{
+    scroll-padding-top: 12%;
+}
+
+i{
+    font-style: italic;
+}
+
 img{
     max-width: 100%;
 }
 
 li{
-    margin-bottom: 0.1rem;
-    margin-top: 0.1rem;
+    margin-bottom: 0.15rem;
+    margin-top: 0.15rem;
 }
 
 nav{
@@ -94,9 +104,14 @@ p, li{
 }
 
 #header{
+    background-color: var(--black);
     font-size: 1.25rem;
     font-weight: 400;
     grid-area: header;
+    padding-bottom: 3rem;
+    padding-top: 2rem;
+    position: sticky;
+    top: 0;
     width: 100%;
 }
 
@@ -105,8 +120,8 @@ p, li{
 }
 
 .list{
-    list-style: square;
-    margin-left: 1rem;
+    list-style: disc;
+    margin-left: 1.3rem;
 }
 
 #main{
@@ -124,7 +139,7 @@ p, li{
         'header header' 
         'main main' 
         'footer footer';
-    margin: 1.5rem auto;
+    margin: 0 auto 1.5rem;
     min-height: 100vh;
     width: 90%;
 }
@@ -176,7 +191,6 @@ p, li{
     }
 
     #wrapper{
-        margin: 3rem auto;
         width: 90%;
     }
 }
