--- a/styles/index.css
+++ b/styles/index.css
@@ -56,14 +56,25 @@
 }
 
 @media (min-width: 1200px){
-    #introduction{
-        width: 60%;
+    main{
+        display: grid;
+        grid-template-columns: 32% 2% auto;
+        grid-template-areas:
+            'introduction . portfolio';
+        width: 100%;
     }
 
-    #projects{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        column-gap: 1rem;
+    #introduction{
+        grid-area: introduction;
         width: 100%;
+    }
+
+    #portfolio{
+        grid-area: portfolio;
+        margin-top: 0;
+    }
+
+    #portfolio h2{
+        margin-top: 0;
     }
 }
