--- a/styles/contact.css
+++ b/styles/contact.css
@@ -2,6 +2,16 @@ form{
     margin-top: 2rem;
 }
 
+form textarea{
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
+    display: block;
+    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: 100%;
+}
+
 lable{
     margin-top: 1.5rem;
 }
@@ -40,6 +50,11 @@ input{
     margin-top: 1.5rem;
     padding: 0.5rem;
     width: 8rem;
+}
+
+#submit-button:hover{
+    background-color: var(--white);
+    color: var(--black);
 }
 
 @media(min-width: 768px){
