--- a/styles/global.css
+++ b/styles/global.css
@@ -49,12 +49,6 @@ h3{
     margin-top: 1rem;
 }
 
-header{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-}
-
 html{
     scroll-padding-top: 12%;
 }
@@ -72,12 +66,21 @@ li{
     margin-top: 0.15rem;
 }
 
-nav{
-    display: none;
+li, p{
+    line-height: 1.75rem;
 }
 
-p, li{
-    line-height: 1.5rem;
+nav{
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+}
+
+nav ul{
+    display: flex;
+}
+
+nav ul li:hover{
+    text-decoration: underline;
 }
 
 /* Specific styles */
@@ -95,10 +98,6 @@ p, li{
     padding-top: 1rem;
 }
 
-#hamburger-menu{
-    justify-self: end;
-}
-
 .h1{
     background-color: var(--blue);
 }
@@ -108,7 +107,7 @@ p, li{
     font-size: 1.25rem;
     font-weight: 400;
     grid-area: header;
-    padding-bottom: 3rem;
+    padding-bottom: 4.5rem;
     padding-top: 2rem;
     position: sticky;
     top: 0;
@@ -119,16 +118,28 @@ p, li{
     text-decoration: underline;
 }
 
+.link:hover{
+    font-weight: 600;
+}
+
 .list{
     list-style: disc;
     margin-left: 1.3rem;
 }
 
+#logo{
+    font-weight: 600;
+}
+
 #main{
     grid-area: main;
-    margin-top: 8%;
+    margin-top: 12%;
     margin-bottom: 8%;
     width: 100%;
+}
+
+.nav-with-gap{
+    margin-right: 1.5rem;
 }
 
 #wrapper{
@@ -145,7 +156,7 @@ p, li{
 }
 
 /* Media queries */
-@media (min-width: 500px){
+@media (min-width: 550px){
     body{
         font-size: 1.125rem;
     }
@@ -156,7 +167,7 @@ p, li{
     }
 
     p, li{
-        line-height: 1.6875rem;
+        line-height: 2rem;
     }
 
     h1{
@@ -167,6 +178,27 @@ p, li{
         font-size: 1.4rem;
     }
 
+    header{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 100%;
+    }
+
+    nav{
+        align-self: center;
+        justify-self: flex-end;
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+
+    #logo{
+        align-self: center;
+    }
+
+    #main{
+        margin-top: 8%;
+        margin-bottom: 8%;
+    }
 
     #wrapper{
         margin-left: auto;
@@ -176,20 +208,6 @@ p, li{
 }
 
 @media (min-width: 750px){
-    #hamburger-menu{
-        display: none;
-    }
-
-    nav{
-        display: block;
-        justify-self: end;
-    }
-
-    nav ul{
-        display: flex;
-        gap: 1.5rem;
-    }
-
     #wrapper{
         width: 90%;
     }
@@ -212,7 +230,7 @@ p, li{
     }
 
     p, li{
-        line-height: 1.875rem;
+        line-height: 2.25rem;
     }
 
     h1{
@@ -220,6 +238,7 @@ p, li{
     }
 
     #wrapper{
+        max-width: 1200px;
         width: 90%;
     }
 }
