--- a/styles/the-ordinary.css
+++ b/styles/the-ordinary.css
@@ -84,7 +84,7 @@ p{
     }
 
     #metadata-div{
-        height: 30rem;
+        height: 36rem;
         position: sticky;
         top: 12%;
         overflow: hidden;
@@ -106,6 +106,11 @@ p{
         list-style: decimal;
         margin-left: 1.3rem;
     }
+
+    #section li:hover{
+        font-weight: 600;
+    }
+    
 
     #content{
         grid-area: content;
